<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:minHeight="48dp"
        android:autofillHints="postalAddress"
        android:hint="@string/hint_city"
        android:inputType="textPostalAddress"/>

    <Spinner
        android:id="@+id/spinnerDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:minHeight="48dp"
        android:entries="@array/forecast_options"
        android:autofillHints="name"/>

    <Button
        android:id="@+id/btnGetCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_key"/>

    <TextView
        android:id="@+id/textKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_location_key"
        android:paddingTop="8dp" />

    <Button
        android:id="@+id/btnGetForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_get_forecast"/>

    <TextView
        android:id="@+id/textForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/label_forecast"/>

</LinearLayout>
